Add new report with task counter

--- a/src/main/resources/jirometer.properties
+++ b/src/main/resources/jirometer.properties
@@ -7,3 +7,7 @@ single-level-group-by-report-extended.description=The Single Level Group By Repo
 creation-report.label=Creation Report
 creation-report.name=Creation Report
 creation-report.description=The Creation Report Plugin
+
+progress-report.label=Progress Report
+progress-report.name=Progress Report
+progress-report.description=The Progress Report Plugin
